--- a/input.css
+++ b/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 /***********************************
 * Nav Item Underline Animation
 ***********************************/
@@ -18,7 +22,7 @@
    height: 2px;
    bottom: 0;
    left: 0;
-   background-color: #121212;
+   background-color: #8EE151;
    /* background-image: linear-gradient(120deg, #B8EE96 0%, #A4E772 100%); */
    transform-origin: bottom right;
    transition: transform 0.25s ease-out;
@@ -28,3 +32,10 @@
    transform: scaleX(1);
    transform-origin: bottom left;
  }
+
+ /***********************************
+* Divider
+***********************************/
+.divider {
+  height: 1px;
+}
