--- a/css/main.css
+++ b/css/main.css
@@ -504,20 +504,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-column: span 2 / span 2;
 }
 
-.col-span-3 {
-  grid-column: span 3 / span 3;
-}
-
 .col-span-4 {
   grid-column: span 4 / span 4;
-}
-
-.col-start-1 {
-  grid-column-start: 1;
-}
-
-.col-start-2 {
-  grid-column-start: 2;
 }
 
 .mx-auto {
@@ -614,10 +602,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 1rem;
 }
 
-.gap-12 {
-  gap: 3rem;
-}
-
 .gap-24 {
   gap: 6rem;
 }
@@ -652,10 +636,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.self-center {
-  align-self: center;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
@@ -669,11 +649,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-pastelGreen {
-  --tw-bg-opacity: 1;
-  background-color: rgb(164 231 114 / var(--tw-bg-opacity));
-}
-
 .bg-darkGrey {
   --tw-bg-opacity: 1;
   background-color: rgb(18 18 18 / var(--tw-bg-opacity));
@@ -682,11 +657,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-lightGrey {
   --tw-bg-opacity: 1;
   background-color: rgb(244 244 244 / var(--tw-bg-opacity));
-}
-
-.bg-makrViolet {
-  --tw-bg-opacity: 1;
-  background-color: rgb(210 202 251 / var(--tw-bg-opacity));
 }
 
 .p-3 {
@@ -726,11 +696,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-32 {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
 }
 
 .pt-2 {
@@ -804,7 +769,7 @@ html {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #8EE151;
+  background-color: #121212;
   /* background-image: linear-gradient(120deg, #B8EE96 0%, #A4E772 100%); */
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
@@ -823,11 +788,6 @@ html {
   height: 1px;
 }
 
-.hover\:bg-pastelGreenHover:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(142 225 81 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-darkGreyHover:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(75 75 75 / var(--tw-bg-opacity));
@@ -839,12 +799,8 @@ html {
 }
 
 @media (min-width: 768px) {
-  .md\:col-span-2 {
-    grid-column: span 2 / span 2;
-  }
-
-  .md\:col-start-2 {
-    grid-column-start: 2;
+  .md\:col-span-3 {
+    grid-column: span 3 / span 3;
   }
 
   .md\:mb-60 {
@@ -865,10 +821,6 @@ html {
 
   .md\:w-1\/2 {
     width: 50%;
-  }
-
-  .md\:w-3\/4 {
-    width: 75%;
   }
 
   .md\:max-w-md {
@@ -925,5 +877,10 @@ html {
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
