--- a/input.css
+++ b/input.css
@@ -22,7 +22,7 @@ html {
    height: 2px;
    bottom: 0;
    left: 0;
-   background-color: #8EE151;
+   background-color: #121212;
    /* background-image: linear-gradient(120deg, #B8EE96 0%, #A4E772 100%); */
    transform-origin: bottom right;
    transition: transform 0.25s ease-out;
